<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content" >

    <ImageView
        android:id="@+id/speaker_picture"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="5dip"
        android:contentDescription="@string/speaker_photo"
        android:src="@drawable/saboo" />

    <TextView
        android:id="@+id/speaker_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/speaker_name"
        android:layout_below="@id/speaker_name"
        android:layout_toLeftOf="@+id/arrow"
        android:text="@string/title"
        android:textColor="@color/titlecolor"
        android:textSize="12sp" />

    <TextView
        android:id="@+id/speaker_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/speaker_picture"
        android:layout_toRightOf="@+id/speaker_picture"
        android:text="@string/name"
        android:textColor="@color/namecolor"
        android:textSize="16sp"
        android:textStyle="bold" />

    <ImageView
        android:id="@+id/arrow"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="10dp"
        android:contentDescription="@string/arrow"
        android:src="@drawable/schedule_arrow" />

</RelativeLayout>