<?xml version="1.0" encoding="utf-8"?>
<!-- 此布局采用线性布局，并用ImageView来当按钮，透明View来充当divider，利用layout_weight，适应多种尺寸屏幕 -->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_background"
    android:orientation="vertical"
    tools:context=".HomeActivity" >

    <View
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="39"
        android:background="@color/divider" />

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_marginLeft="14dp"
        android:layout_marginRight="5dp"
        android:layout_weight="143" >

        <TableRow
            android:id="@+id/row1"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="100" >

            <ImageView
                android:id="@+id/checkIn_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:background="@drawable/btn_selector"
                android:clickable="true"
                android:contentDescription="@string/checkIn_btn"
                android:src="@drawable/home_menucheckin" />

            <ImageView
                android:id="@+id/program_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="40"
                android:background="@drawable/btn_selector"
                android:clickable="true"
                android:contentDescription="@string/program_btn"
                android:src="@drawable/home_menuprogram" />

            <ImageView
                android:id="@+id/speakers_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="32"
                android:background="@drawable/btn_selector"
                android:clickable="true"
                android:contentDescription="@string/checkIn_btn"
                android:src="@drawable/home_menuspeakers" />
        </TableRow>

        <TableRow
            android:id="@+id/row2"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="100" >

            <ImageView
                android:id="@+id/hackathon_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:background="@drawable/btn_selector"
                android:clickable="true"
                android:contentDescription="@string/checkIn_btn"
                android:src="@drawable/home_menuhackathon" />

            <ImageView
                android:id="@+id/gallery_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="40"
                android:background="@drawable/btn_selector"
                android:clickable="true"
                android:contentDescription="@string/checkIn_btn"
                android:src="@drawable/home_menugallery" />

            <ImageView
                android:id="@+id/social_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="32"
                android:background="@drawable/btn_selector"
                android:clickable="true"
                android:contentDescription="@string/checkIn_btn"
                android:src="@drawable/home_menusocial" />
        </TableRow>

        <TableRow
            android:id="@+id/row3"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="100" >

            <ImageView
                android:id="@+id/highlights_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:background="@drawable/btn_selector"
                android:clickable="true"
                android:contentDescription="@string/checkIn_btn"
                android:src="@drawable/home_menuparties" />

            <ImageView
                android:id="@+id/map_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="40"
                android:background="@drawable/btn_selector"
                android:clickable="true"
                android:contentDescription="@string/checkIn_btn"
                android:src="@drawable/home_menumap" />

            <ImageView
                android:id="@+id/sponsors_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="32"
                android:background="@drawable/btn_selector"
                android:clickable="true"
                android:contentDescription="@string/checkIn_btn"
                android:src="@drawable/home_menusponsors" />
        </TableRow>

        <TableRow
            android:id="@+id/row4"
            android:layout_width="match_parent"
            android:layout_height="0dip"
            android:layout_weight="100" >

            <ImageView
                android:id="@+id/product_selector_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="25"
                android:background="@drawable/btn_selector"
                android:clickable="true"
                android:contentDescription="@string/checkIn_btn"
                android:src="@drawable/home_menuproduct" />

            <ImageView
                android:id="@+id/leaderborad_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="40"
                android:background="@drawable/btn_selector"
                android:clickable="true"
                android:contentDescription="@string/checkIn_btn"
                android:src="@drawable/home_leaders" />

            <ImageView
                android:id="@+id/badges_btn"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_weight="32"
                android:background="@drawable/btn_selector"
                android:clickable="true"
                android:contentDescription="@string/checkIn_btn"
                android:src="@drawable/home_badges" />
        </TableRow>
    </TableLayout>

    <TableRow
        android:layout_width="match_parent"
        android:layout_height="0dip"
        android:layout_weight="9" >

        <TableRow
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:gravity="center_vertical|center_horizontal" >

            <ImageView
                android:id="@+id/home_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal|center"
                android:background="@drawable/btn_selector"
                android:clickable="true"
                android:contentDescription="@string/home_btn"
                android:scaleType="matrix"
                android:src="@drawable/home_icon" />
        </TableRow>

        <View
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_weight="8"
            android:background="@color/divider" />

        <TableRow
            android:layout_width="0dip"
            android:layout_height="match_parent"
            android:layout_gravity="center"
            android:layout_weight="2"
            android:gravity="center_vertical|center_horizontal" >

            <ImageView
                android:id="@+id/info_btn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal|center"
                android:background="@drawable/btn_selector"
                android:clickable="true"
                android:contentDescription="@string/info_btn"
                android:scaleType="matrix"
                android:src="@drawable/info_icon" />
        </TableRow>
    </TableRow>

</LinearLayout>